qc pass: p4lang: nsh
qc pass: p4lang: vlan nsh
---------------------------------- 2021-10-26 04:48:37
todo: bgp layer2 flowspec
---------------------------------- 2021-10-27 20:26:55
qc pass: polka over ethernet
qc pass: polka over ethernet vlan
qc pass: polka over ethernet bridge
qc pass: polka over hdlc
qc pass: polka over ppp
qc pass: polka over framerelay
qc pass: polka over atmdxi
qc pass: polka over gre
qc pass: polka over broadcast subnet
qc pass: polka over ethernet chain
qc pass: bgp with polka
qc pass: isis with polka
qc pass: lsrp with polka
qc pass: ospf with polka
---------------------------------- 2021-10-28 05:08:40
qc pass: pwe over polka
qc pass: bgp vpns over polka
---------------------------------- 2021-10-28 11:04:49
qc pass: p4lang: polka
qc pass: p4lang: vlan polka
---------------------------------- 2021-11-06 08:26:03
no todo: consider bgp neigh recursive-nexthop knob with proper limiters
qc pass: bgp without recursion
qc pass: bgp with recursion
---------------------------------- 2021-11-08 04:21:51
no todo: interactive switch for traceroute to mimic mtr with class util.dampening, similar to mtr - display traceroute with the same parameters or so
---------------------------------- 2021-11-08 10:43:58
qc pass: bgp with route flap dampening
---------------------------------- 2021-11-08 16:39:31
qc pass: isis default address suppression
qc pass: integrated isis default address suppression
qc pass: isis address unsuppression
qc pass: integrated isis address unsuppression
qc pass: ospf default address suppression
qc pass: ospf address unsuppression
---------------------------------- 2021-11-08 18:16:21
qc pass: babel default address suppression
qc pass: babel address unsuppression
qc pass: eigrp default address suppression
qc pass: eigrp address unsuppression
qc pass: olsr default address suppression
qc pass: olsr address unsuppression
qc pass: rip default address suppression
qc pass: rip address unsuppression