@@ -3,6 +3,7 @@ package net.freertr.ip;
 import java.util.Comparator;
 import net.freertr.addr.addrIP;
 import net.freertr.addr.addrMac;
+import net.freertr.cfg.cfgScrpt;
 import net.freertr.tab.tabGen;
 import net.freertr.util.bits;
 import net.freertr.util.logger;
@@ -21,6 +22,21 @@ public class ipHostWatch implements Runnable {
     private tabGen<ipHostWatchEntry> hosts = new tabGen<ipHostWatchEntry>();
 
     /**
+     * script to run on node appearance
+     */
+    public cfgScrpt nodeOn;
+
+    /**
+     * script to run on node change
+     */
+    public cfgScrpt nodeChg;
+
+    /**
+     * script to run on node disappearance
+     */
+    public cfgScrpt nodeOff;
+
+    /**
      * create new interface
      *
      * @param iface interface to work on
@@ -28,6 +44,20 @@ public class ipHostWatch implements Runnable {
     public ipHostWatch(ipIfc iface) {
         ifc = iface;
         new Thread(this).start();
+    }
+
+    public String toString() {
+        String a = "";
+        if (nodeOn != null) {
+            a += " appear " + nodeOn.name;
+        }
+        if (nodeChg != null) {
+            a += " change " + nodeChg.name;
+        }
+        if (nodeOff != null) {
+            a += " disappear " + nodeOff.name;
+        }
+        return a.trim();
     }
 
     /**
@@ -65,10 +95,18 @@ public class ipHostWatch implements Runnable {
             ipHostWatchEntry old = hosts.find(cur);
             if (old == null) {
                 logger.info("new host appeared " + cur);
+                if (nodeOn == null) {
+                    continue;
+                }
+                nodeOn.doRound(bits.str2lst("set remote " + cur.ip));
                 continue;
             }
             if (cur.mac.compare(cur.mac, old.mac) != 0) {
                 logger.info("host changed from " + old + " to " + cur);
+                if (nodeChg == null) {
+                    continue;
+                }
+                nodeChg.doRound(bits.str2lst("set remote " + cur.ip));
                 continue;
             }
         }
@@ -76,6 +114,10 @@ public class ipHostWatch implements Runnable {
             ipHostWatchEntry old = hosts.get(i);
             if (fresh.find(old) == null) {
                 logger.info("host disappeared " + old);
+                if (nodeOff == null) {
+                    continue;
+                }
+                nodeOff.doRound(bits.str2lst("set remote " + old.ip));
                 continue;
             }
         }
