@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v21.11.9-cur, done by cs@nop.
--;-;-;2021-11-09 08:12:37, took 00:06:38, with 100 workers, on 2447 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2021-11-09 09:55:51, took 00:06:05, with 100 workers, on 2447 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
