@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v21.11.9-cur, done by cs@nop.<br/>
-tested: 2021-11-09 08:12:37, took 00:06:38, with 100 workers, on 2447 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2021-11-09 09:55:51, took 00:06:05, with 100 workers, on 2447 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
